--- a/public/global.css
+++ b/public/global.css
@@ -2,7 +2,7 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
-  background-color: #5CDB95;
+  background-color: #7bb997;
 }
 
 body {
